--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
 name: TheBrewingProject
-main: dev.jsinco.brewery.TheBrewingProject
+main: dev.jsinco.bukkit.TheBrewingProject
 description: 'Help me.'
-author: 'Jsinco'
-authors: [Mitality]
+authors: [Jsinco, Mitality, Nadwey]
 version: '${version}'
 api-version: '1.20'
 softdepend:
   - Oraxen
+  - ItemsAdder
